include_directories(../include)

SET(CMAKE_CURRENT_BINARY_DIR cmac)

FILE( GLOB_RECURSE CM_BASIC_SRC
         "${CMAKE_CURRENT_SOURCE_DIR}/*.cc" 
         "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
         )

set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../lib)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../bin)


#ADD_LIBRARY(${LIBS_CMAC_STATIC} STATIC ${CM_BASIC_SRC})
#TARGET_LINK_LIBRARIES(${LIBS_CMAC_STATIC} ${LIBS_ME} ${LIBS_TIXML} )
#SET_TARGET_PROPERTIES (${LIBS_CMAC_STATIC} PROPERTIES OUTPUT_NAME cmac CLEAN_DIRECT_OUTPUT 1)

ADD_LIBRARY(${LIBS_CMAC} SHARED ${CM_BASIC_SRC})
TARGET_LINK_LIBRARIES(${LIBS_CMAC} ${LIBS_ME} ${LIBS_TIXML} )
SET_TARGET_PROPERTIES ( ${LIBS_CMAC} PROPERTIES OUTPUT_NAME cmac CLEAN_DIRECT_OUTPUT 1)

INSTALL(TARGETS ${LIBS_CMAC}
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
  )
